# magnum-bootstrap

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  MyApplication.cpp  MyApplication.html  Types.cpp  Types.h  configure.h
src/3dObjects/: Plane.cpp  Plane.h  RectangleObject.cpp  RectangleObject.h  Sphere.cpp  Sphere.h
src/resources/: GUIResources.conf
